--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ button {
     margin: 0 5px;
 }
 
+input[type="range"] {
+    vertical-align: middle;
+    margin: 0 5px;
+}
+
 #board {
     border: 1px solid #000;
 }
